<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:title="@string/pref_autoStartLogCategoryTitle" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_autoStartLog"
            android:summary="@string/pref_autoStartLogSummary"
            android:title="@string/pref_autoStartLogTitle" />

        <com.cachirulop.whereiparked.preferences.BluetoothDevicePreference
            android:dependency="pref_autoStartLog"
            android:dialogTitle="@string/pref_bluetoothDeviceSummary"
            android:key="pref_bluetoothDeviceList"
            android:title="@string/pref_bluetoothDeviceTitle" />
    </PreferenceCategory>
</PreferenceScreen>
